bugfix/develop: -- fixed aligns;

--- a/src/app/pages/accounts/components/transactions/transaction-item/transaction-item.component.scss
+++ b/src/app/pages/accounts/components/transactions/transaction-item/transaction-item.component.scss
@@ -21,6 +21,7 @@
 .type-container {
   .type {
     &__entity {
+      text-align: right;
       @include font-nunito-semibold(16px);
     }
 
